fix code overflow

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -48,6 +48,7 @@ pre {
   border-radius: 4px;
   background-color: var(--grey60);
   padding: 0.5em;
+  overflow: scroll;
 }
 
 code {
